2001-07-13  Yuuichi Teranishi  <teranisi@gohome.org>

	* elserv.el: Removed comment for elserv-demo.el.

	* elserv-mhc.el, elserv-wiki.el, elserv-demo.el: Deleted (Renamed).

	* es-demo.el: Renamed from elserv-demo.el.

	* es-mhc.el: Renamed from elserv-mhc.el.

	* es-wiki.el: Renamed from elserv-wiki.el.
	(elserv-wiki-function): Renamed from `elserv-wiki'.

	* elserv.el (elserv-parse-path): Changed behavior like XEmacs.
	(elserv-service): Changed path analyse process.
	path always starts with '/'.
	(elserv-service-directory): Follow changes above.

	* elserv-wiki.el (elserv-wiki): Likewise.

	* elserv-mhc.el (elserv-mhc-function): Likewise.

2001-07-12  OHASHI Akira  <bg66@koka-in.org>

	* elserv.el (elserv-service-directory): Fix.

2001-07-09  Yuuichi Teranishi  <teranisi@gohome.org>

	* remote.el (remote-controller): Use function system-name instead
	of variable.

	* web-custom.el (web-custom): Ditto.

	* elserv.el (elserv-parse-path): New function.
	(elserv-service): Ditto.
	(Pointed out by "OHASHI, Akira" <bg66@koka-in.org>)

	* elserv-mhc.el (elserv-mhc-face-foreground): New function.
	(elserv-mhc-face-background): Ditto.
	(elserv-mhc-string-with-face): Use above functions.
	(elserv-mhc-content): Ditto.
	(elserv-mhc-start): Use function system-name instead of variable.

2001-07-06  Yuuichi Teranishi  <teranisi@gohome.org>

	* elserv-wiki.el (elserv-wiki): Follow changes for path.

	* elserv.el (elserv-define-status-code): Renamed from
	elserv-define-result-code (All other related portions are changed).
	(elserv-moved-permanently): Renamed from elserv-moved/perm.
	(elserv-make-redirect): Follow chage above.
	(elserv-moved-found): Renamed from elserv-moved/temp.
	(elserv-see-other): Added.
	(elserv-not-modified): Ditto.
	(elserv-process-request): Added argument `request'.
	(elserv-process-filter): Follow change above.
	(elserv-call-service-function-maybe): New inline function.
	(elserv-service): Search for all hierarchies of paths.